@startuml

title __GEOTEXTUALAPPROXIMATEOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geoTextualOperators {
        namespace geoTextualApproximateOperators {
          abstract class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geoTextualOperators.geoTextualApproximateOperators.GeoTextualApproximateOperator {
              # GeoTextualApproximateOperator()
          }
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace geoperators.geoTextualOperators {
        namespace geoTextualApproximateOperators {
          class gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geoTextualOperators.geoTextualApproximateOperators.OperatorTopKInGeoTextualCircle {
              - topK : int
              + getOperatorExpression()
              + getTopK()
              {static} + newOperatorTopKInGeoTextualCircle()
              # OperatorTopKInGeoTextualCircle()
          }
        }
      }
    }
  }
  

  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geoTextualOperators.geoTextualApproximateOperators.GeoTextualApproximateOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geoTextualOperators.geoTextualApproximateOperators.GeoTextualApproximateOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geoTextualOperators.geoTextualApproximateOperators.OperatorTopKInGeoTextualCircle -up-|> gr.ds.unipi.noda.api.redisearch.filterOperators.geoperators.geoTextualOperators.geoTextualApproximateOperators.GeoTextualApproximateOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
